# quickentity-ffi

./: Cargo.toml
.github/workflows/: build.yml
src/: lib.rs
